# rubika-bot-saas

./: .dockerignore  .env  .env.delivery.dryrun  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml
alembic/: env.py  script.py.mako
alembic/versions/: 1b4fdbf2f3a7_add_webhook_event_processing_logs.py  201d39123257_add_refresh_tokens_table.py  2903b9c7c51c_add_queued_status_for_scheduled_posts.py  2a9e5f1fae31_add_user_columns_for_current_model.py  3f4a8e2c9c1b_restore_workspaces_owner_id_column.py  4c8e2e7a6d1b_make_workspace_slug_nullable.py  5d8f4ea6a2f1_add_workspace_members_deleted_at.py  7815ab12f360_add_scheduled_posts_table.py  7f87452a5e4d_add_hashed_password_to_users.py  8c1f9d2a4b77_add_filters_reason_column.py  9a2c7f4d1e22_add_filter_match_type_and_actions.py  a4d9e8b6c1f0_add_auto_reply_flow_fields.py  b31f9a374f49_fix_schema_to_match_models.py  cbb716c6ed46_initial_migration.py  eac588709f37_merge_scheduled_posts_heads.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  auth.py  auto_replies.py  channels.py  filters.py  reports.py  scheduled_posts.py  webhooks.py  workspaces.py
app/core/: config.py  config.py.backup  errors.py  exceptions.py  logging.py  security.py
app/db/: __init__.py  base.py  session.py
app/integrations/: __init__.py  rubika_sender.py
app/models/: __init__.py  auto_reply.py  channel.py  filter.py  refresh_token.py  report.py  scheduled_post.py  user.py  webhook.py  webhook_processing.py  workspace.py
app/repositories/: __init__.py  auto_reply_repository.py  base.py  channel_repository.py  filter_repository.py  message_processing_log_repository.py  scheduled_post_repository.py  user_repository.py  webhook_event_repository.py
app/scheduler/: __init__.py  runner.py  service.py
app/schemas/: auth.py  auto_reply.py  channel.py  filter.py  report.py  scheduled_post.py  webhook.py  workspace.py
app/services/: auth_service.py  auto_reply_service.py  channel_service.py  filter_service.py  report_service.py  scheduled_post_service.py  webhook_service.py  workspace_service.py
app/static/: admin.html
app/workers/: __init__.py  jobs.py  queue.py  runner.py
docs/: 01-product-scope.md  02-system-architecture.md  03-database-design.md  04-sql-schema.sql.md  05-background-jobs.md  06-message-processing.md  07-reporting.md  08-mvp-rules-and-limitations.md  09-backend-api-design.md  10-api-auth.md  11-api-workspaces.md  12-api-channels.md  13-api-scheduled-posts.md  14-api-auto-replies.md  15-api-filters.md  16-api-reports.md  17-api-webhooks-and-events.md  18-api-validation-and-errors.md  19-api-implementation-notes.md  20-openapi-notes.md  MVP_ROADMAP.md  PROJECT_EXECUTION_GUIDE.md  RUBIKA_BOT_API_DOCUMENTATION.md  Staging Checklist + Production Checklist.md  backup-restore-runbook.md  customer-deployment-template.md  customer-handover-checklist.md  customer-prerequisites.md  demo-script.md  deployment.md  environment-reference.md  final-verification.md  non-goals-v1.md  off-repo-actions.md  phase-summary.md  pricing-scope-matrix.md  production-maintenance-log.md  quick_mvp_real_use_readiness.md  rubika-external-operations.md  service-model.md
docs/systemd/: api.service  scheduler.service  worker.service
scripts/: configure_rubika_webhook.sh  ensure_migrations.sh  run_api.sh  run_scheduler.sh  run_worker.sh  seed_demo_data.py
tests/: conftest.py  test_auth.py  test_auto_replies.py  test_error_handlers.py  test_filters.py  test_health.py  test_reports.py  test_scheduled_posts.py  test_scheduler_worker.py  test_webhooks.py
