[project]
name = "rubika-bot-saas"
version = "0.1.0"
description = "Rubika Bot SaaS Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.32.1",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "redis>=5.2.0",
    "rq>=2.0.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "python-jose[argon2,cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.1",
    "psycopg[binary]>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "argon2-cffi>=25.1.0",
    "aiosqlite>=0.22.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "httpx>=0.28.1",
    "faker>=33.1.0",
    "types-python-jose>=3.5.0.20260408",
    "types-passlib>=1.7.7.20260211",
    "pydantic>=2.13.4",
    "email-validator>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".git", ".venv", "__pycache__", "alembic/versions", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",
    "B008", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

exclude = ["alembic/", ".venv/"]

[[tool.mypy.overrides]]
module = ["rq.*", "redis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/alembic/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
